# NLW

./: .gitignore  example.py  pyproject.toml  storage.db
src/controllers/: activity_creator.py  activity_finder.py  link_creator.py  link_finder.py  participant_confirmer.py  participant_creator.py  participant_finder.py  trip_confirmer.py  trip_creator.py  trip_finder.py
src/drivers/: email_sender.py
src/main/routes/: trips_routes.py
src/main/server/: server.py
src/models/repositories/: activities_repository.py  activities_repository_test.py  emails_to_invite_repository.py  emails_to_invite_repository_test.py  links_repository.py  links_repository_test.py  participants_repository.py  participants_repository_test.py  trips_repository.py  trips_repository_test.py
